src/Components/Content/Projects/Project/Project.module.css
.projectContainer {
    margin: 10px 10px 300px 10px;
    padding: 0 100px;
    background-color: #858ae3;
    border: 4px #613dc1 solid;
    text-align: center;
    color: rgb(217, 224, 230);
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.projectTitle {
    font-size: 1.5em;
}

.dropdownElement {
    position: relative;
}

.dropdownContainer {
    display: flex;
    justify-content: space-evenly;
    margin-bottom: 30px;
}

.projectTitle {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.gitHubButton {
    width: 40px;
    height: 40px;
    background-color: #4e4662;
    border-radius: 50%;
    padding: 5px;
    margin: 2px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    border: none;
}

.gitHubButton:hover {
    filter: brightness(1.3)
}

.gitHubImage {
    width: 30px;
}

.dropdownMenu {
    position: absolute;
    left: -100%;
    top: calc(100% + 0.3rem);
    background-color: #7478c0;
    padding: .5rem;
    border-radius: .25rem;
    box-shadow: 0 2px 5px 0 rgb(0, 0, 0,  .2);
    opacity: 0;
    z-index: 3;
}

.dropdownElement > .dropdownButton:hover + .dropdownMenu {
    opacity: 1;
}


.dropdownMenuContainer {
    background-color: #505284;
    width: 350px;
    display: flex;
    padding: 0, 10px;
    justify-content: center;
    align-items: center;
    margin: 4px;
    border-radius: 2px;
    color: rgb(219, 227, 234);
    line-height: 1.4em;   
}

.dropdownSkills {
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}
.skillsPic {
    width: 50px;
    margin-right: 100px;
    margin-left: 25px;
}

span {
    line-height: 30px;
}

.dropdownButton {
    width: 120px;
    height: 50px;
    font-size: 1.1em;
    background-color: #6b6fb2;
    border: 1px #5e619b solid;
    border-radius: 2px;
    padding: 10px;
    margin: 4px;
    color: rgb(219, 227, 234);
    letter-spacing: 1px; 
}


@media screen and (max-width: 900px) {
    .projectContainer {
        padding: 0 20px;
        margin: 10px 10px 170px 10px;

    }

    .dropdownMenu {

        padding: .3rem;

    }

    .dropdownMenuContainer {
        width: 200px;
        padding: 0 5px;
        margin: 2px;
        border-radius: 1px;
        line-height: 1.25em;
        justify-content: space-evenly;
        font-size: 0.8em;   
    }

    .skillsPic {
        width: 30px;
        margin-right: 20px;
        margin-left: 10px;
    }

    .dropdownMenu {
        left: -55%;
    }

    .dropdownButton {
        width: 90px;
        height: 35px;
        font-size: 0.8em;
        padding: 5px;
        margin: 4px;
    }

    .projectTitle {
        font-size: 1em;
    }
}

@media screen and (max-width: 600px) {

    .projectContainer {
        margin: 10px 10px 150px 10px;
    }
    
    .dropdownMenu {
        width: 180px;
    }
    
    .dropdownMenuContainer {
        width: 165px;
        font-size: 0.6em;   
    }


}

